# basicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/array_sortings/: bubble_sort.c  bubble_sort.h  combSort.c  combSort.h  comb_sort.c  comb_sort.h  countSort.c  countSort.h  count_sort.c  digitSort.c  digitSort.h  digit_sort.c  digit_sort.h  insertionSort.c  insertion_sort.c  insertion_sort.h  selection_sort.c  selection_sort.h  shellSort.c  shellSort.h  shell_sort.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  tasks_matrix.c  tasks_matrix.h
libs/data_structures/matrix/tasks/: tasks_matrix.c  tasks_matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/tests/: test_matrix.c  test_matrix.h  test_set.c  test_set.h  test_vector.c  test_vector.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  void_vector.c  void_vector.h
libs/data_structures/void_vector/: void_vector.h
libs/sorting_time_complexity/: CMakeLists.txt  sorting_time_complexity.c  sorting_time_complexity.h
libs/string/: CMakeLists.txt  string_.c  string_.h
libs/string/tasks/: areWordsLexicographicallyOrdered.c  areWordsLexicographicallyOrdered.h  complementS2.c  complementS2.h  deleteWordsWhichAreEqualToLastWord.c  deleteWordsWhichAreEqualToLastWord.h  digitToEndTransform.c  digitToEndTransform.h  digitToStartReverseTransform.c  digitToStartReverseTransform.h  fillStringWithAlternatingWordsOfTwoOtherStrings.c  fillStringWithAlternatingWordsOfTwoOtherStrings.h  getPalindromesCount.c  getPalindromesCount.h  getStringFromWordsOfStringWhichAreNotEqualToLastWord.c  getStringFromWordsOfStringWhichAreNotEqualToLastWord.h  getWordBeforeFirstWWord.c  getWordBeforeFirstWWord.h  getWordBeforeFirstWordWithA.c  getWordBeforeFirstWordWithA.h  hasStringEveryCharOfWord.c  hasStringEveryCharOfWord.h  hasStringIdenticalWords.c  hasStringIdenticalWords.h  hasStringPairOfWordsWithIdenticalCharacters.c  hasStringPairOfWordsWithIdenticalCharacters.h  lastWordInFirstStringInSecondString.c  lastWordInFirstStringInSecondString.h  printWordsReverse.c  printWordsReverse.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.c  replace.h  replaceDigitsBySpaces.c  replaceDigitsBySpaces.h  reverseWordOrderInString.c  reverseWordOrderInString.h
libs/string/tests/: test_string.c  test_string.h
(+4 files in other folders)
