add_library(algorithms
        algorithm.c

        array/array.c

        array_sortings/bubble_sort.c
        array_sortings/selection_sort.c
        array_sortings/insertionSort.c
        array_sortings/combSort.c
        array_sortings/shellSort.c
        array_sortings/countSort.c
        array_sortings/digitSort.c
)