add_library(algorithms
        algorithm.c

        array/array.c

        array_sortings/bubble_sort.c
        array_sortings/selection_sort.c
        array_sortings/insertion_sort.c
        array_sortings/comb_sort.c
        array_sortings/shell_sort.c
        array_sortings/count_sort.c
        array_sortings/digit_sort.c
)