add_library(data_structures
        bitset/bitset.c
        ordered_array_set/ordered_array_set.c
        unordered_array_set/unordered_array_set.c
        tests/test_set.c
        vector/vector.c
        void_vector/void_vector.c
        tests/test_vector.c
        matrix/matrix.c
        matrix/tasks/tasks_matrix.c
        tests/test_matrix.c
)