add_library(string
        string_.c
        tasks/removeNonLetters.c
        tasks/removeExtraSpaces.c
        tasks/digitToStartReverseTransform.c
        tasks/digitToEndTransform.c
        tasks/replaceDigitsBySpaces.c
        tasks/replace.c
        tasks/areWordsLexicographicallyOrdered.c
        tasks/printWordsReverse.c
        tasks/getPalindromesCount.c
        tasks/fillStringWithAlternatingWordsOfTwoOtherStrings.c
)